--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mini Minecraft/Terraria with Camera</title>
+<title>Top-Down Layered World</title>
 <style>
-  body { margin: 0; overflow: hidden; background: linear-gradient(#87CEEB, #228B22); font-family: sans-serif; }
+  body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
   canvas { display: block; background: #87CEEB; }
   #inventory { position: absolute; bottom: 10px; left: 10px; display: flex; gap: 5px; }
   .slot { width: 40px; height: 40px; border: 2px solid white; background: rgba(0,0,0,0.3); display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; cursor: pointer; }
@@ -22,26 +22,41 @@ const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-const tileSize = 40;
-const worldWidth = 100;
-const worldHeight = 15;
+const tileSize = 50;
+const worldWidth = 50;
+const worldHeight = 50;
 
-const blockTypes = ['dirt','stone','grass'];
-const blockColors = { dirt:'#8B4513', stone:'#808080', grass:'#228B22' };
+// Layers
+const groundLayer = [];
+const objectLayer = [];
+const itemLayer = []; // player-placed blocks or pickups
 
-// Terrain generation (simple)
-const world = [];
+// Block types/colors
+const blockColors = { grass:'#228B22', dirt:'#8B4513', stone:'#808080', tree:'#006400' };
+
+// Generate layers
 for(let y=0;y<worldHeight;y++){
-  world[y]=[];
+  groundLayer[y]=[];
+  objectLayer[y]=[];
+  itemLayer[y]=[];
   for(let x=0;x<worldWidth;x++){
-    if(y===0) world[y][x]='grass';
-    else if(y<3) world[y][x]='dirt';
-    else world[y][x]='stone';
+    // Ground layer
+    const r = Math.random();
+    if(r<0.1) groundLayer[y][x]='stone';
+    else if(r<0.4) groundLayer[y][x]='dirt';
+    else groundLayer[y][x]='grass';
+    
+    // Object layer
+    if(Math.random()<0.05 && groundLayer[y][x]==='grass') objectLayer[y][x]='tree';
+    else objectLayer[y][x]=null;
+
+    // Item layer empty initially
+    itemLayer[y][x]=null;
   }
 }
 
 // Player
-const player = { x:200, y:100, width:tileSize, height:tileSize*2, color:'red', vx:0, vy:0, speed:5, jumpPower:15, onGround:false };
+const player = { x: worldWidth/2*tileSize, y: worldHeight/2*tileSize, width: tileSize*0.8, height: tileSize*0.8, color:'red', speed:6 };
 
 // Camera
 const camera = { x:0, y:0, width:canvas.width, height:canvas.height };
@@ -66,27 +81,33 @@ updateInventory();
 
 // Controls
 const keys = {};
-document.addEventListener('keydown', e=>keys[e.key]=true);
-document.addEventListener('keyup', e=>keys[e.key]=false);
+document.addEventListener('keydown', e=>keys[e.key.toLowerCase()]=true);
+document.addEventListener('keyup', e=>keys[e.key.toLowerCase()]=false);
 
 // Mouse interaction
 canvas.addEventListener('mousedown', e=>{
   const mx = e.clientX + camera.x;
-  const my = canvas.height - e.clientY + camera.y; // flip Y for world coords
-  const tileX = Math.floor(mx / tileSize);
-  const tileY = Math.floor(my / tileSize);
+  const my = e.clientY + camera.y;
+  const tileX = Math.floor(mx/tileSize);
+  const tileY = Math.floor(my/tileSize);
+
   if(e.button===0){ // mine
-    const block = world[tileY]?.[tileX];
-    if(block){
+    let minedBlock = null;
+    // Prioritize topmost layer
+    if(itemLayer[tileY]?.[tileX]) { minedBlock=itemLayer[tileY][tileX]; itemLayer[tileY][tileX]=null; }
+    else if(objectLayer[tileY]?.[tileX]) { minedBlock=objectLayer[tileY][tileX]; objectLayer[tileY][tileX]=null; }
+    else if(groundLayer[tileY]?.[tileX]) { minedBlock=groundLayer[tileY][tileX]; groundLayer[tileY][tileX]=null; }
+    
+    if(minedBlock){
       const slotIndex = Object.keys(inventory).length<inventorySize ? Object.keys(inventory).length : selectedSlot;
-      inventory[slotIndex] = block;
-      world[tileY][tileX]=null;
+      inventory[slotIndex] = minedBlock;
       updateInventory();
     }
+
   } else if(e.button===2){ // place
     const block = inventory[selectedSlot];
-    if(block && world[tileY]?.[tileX]===null){
-      world[tileY][tileX]=block;
+    if(block && itemLayer[tileY]?.[tileX]===null){
+      itemLayer[tileY][tileX]=block;
       inventory[selectedSlot]=null;
       updateInventory();
     }
@@ -96,43 +117,23 @@ canvas.oncontextmenu = e=>e.preventDefault();
 
 // Game loop
 function update(){
-  // Movement
-  player.vx = 0;
-  if(keys['a']) player.vx=-player.speed;
-  if(keys['d']) player.vx=player.speed;
-  if(keys['w'] && player.onGround){ player.vy = player.jumpPower; player.onGround=false; }
+  // Move player
+  let dx=0, dy=0;
+  if(keys['w']) dy=-player.speed;
+  if(keys['s']) dy=player.speed;
+  if(keys['a']) dx=-player.speed;
+  if(keys['d']) dx=player.speed;
 
-  // Gravity
-  player.vy -= 0.8; // downward is negative
-  player.x += player.vx;
-  player.y += player.vy;
+  player.x += dx;
+  player.y += dy;
 
-  // Collision
-  player.onGround=false;
-  for(let y=0;y<worldHeight;y++){
-    for(let x=0;x<worldWidth;x++){
-      const block = world[y][x];
-      if(block){
-        const bx = x*tileSize;
-        const by = y*tileSize;
-        if(player.x+player.width>bx && player.x<bx+tileSize &&
-           player.y<by+tileSize && player.y+player.height>by){
-          if(player.vy<0){ // falling
-            player.y = by + tileSize;
-            player.vy=0;
-          } else if(player.vy>0){ // jumping up
-            player.y = by - player.height;
-            player.vy=0;
-            player.onGround=true;
-          }
-        }
-      }
-    }
-  }
+  // Keep player inside world
+  player.x = Math.max(0, Math.min(worldWidth*tileSize-player.width, player.x));
+  player.y = Math.max(0, Math.min(worldHeight*tileSize-player.height, player.y));
 
   // Camera follows player
-  camera.x = player.x - canvas.width/2 + player.width/2;
-  camera.y = player.y - canvas.height/2 + player.height/2;
+  camera.x = player.x + player.width/2 - canvas.width/2;
+  camera.y = player.y + player.height/2 - canvas.height/2;
 
   draw();
   requestAnimationFrame(update);
@@ -141,23 +142,41 @@ function update(){
 // Draw function
 function draw(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  // Draw world
-  for(let y=0;y<worldHeight;y++){
-    for(let x=0;x<worldWidth;x++){
-      const block = world[y][x];
-      if(block){
-        const drawX = x*tileSize - camera.x;
-        const drawY = canvas.height - ((y+1)*tileSize) + camera.y; // flip Y
-        ctx.fillStyle = blockColors[block];
+
+  const startCol = Math.floor(camera.x/tileSize);
+  const endCol = startCol + Math.ceil(canvas.width/tileSize)+1;
+  const startRow = Math.floor(camera.y/tileSize);
+  const endRow = startRow + Math.ceil(canvas.height/tileSize)+1;
+
+  for(let y=startRow;y<endRow;y++){
+    for(let x=startCol;x<endCol;x++){
+      const drawX = x*tileSize - camera.x;
+      const drawY = y*tileSize - camera.y;
+
+      // Draw layers bottom->top
+      if(groundLayer[y]?.[x]) {
+        ctx.fillStyle = blockColors[groundLayer[y][x]];
         ctx.fillRect(drawX, drawY, tileSize, tileSize);
-        ctx.strokeStyle='black';
+        ctx.strokeRect(drawX, drawY, tileSize, tileSize);
+      }
+
+      if(objectLayer[y]?.[x]) {
+        ctx.fillStyle = blockColors[objectLayer[y][x]];
+        ctx.fillRect(drawX, drawY, tileSize, tileSize);
+        ctx.strokeRect(drawX, drawY, tileSize, tileSize);
+      }
+
+      if(itemLayer[y]?.[x]) {
+        ctx.fillStyle = blockColors[itemLayer[y][x]];
+        ctx.fillRect(drawX, drawY, tileSize, tileSize);
         ctx.strokeRect(drawX, drawY, tileSize, tileSize);
       }
     }
   }
+
   // Draw player
   const px = player.x - camera.x;
-  const py = canvas.height - (player.y + player.height) + camera.y;
+  const py = player.y - camera.y;
   ctx.fillStyle = player.color;
   ctx.fillRect(px, py, player.width, player.height);
 }
