--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Top-Down Island</title>
+<title>Top-Down Island Shape</title>
 <style>
   body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
   canvas { display: block; background: #87CEEB; }
@@ -34,7 +34,7 @@ const itemLayer = [];
 // Block types/colors
 const blockColors = { grass:'#228B22', dirt:'#8B4513', stone:'#808080', tree:'#006400', water:'#1E90FF', sand:'#FFF5BA' };
 
-// Island generation using distance from center
+// Generate island shape using radial falloff + randomness
 const centerX = worldWidth/2;
 const centerY = worldHeight/2;
 const maxDistance = Math.sqrt(centerX**2 + centerY**2);
@@ -46,8 +46,11 @@ for(let y=0;y<worldHeight;y++){
   for(let x=0;x<worldWidth;x++){
     const dx = x - centerX;
     const dy = y - centerY;
-    const distance = Math.sqrt(dx*dx + dy*dy)/maxDistance; // 0=center, 1=edge
+    let distance = Math.sqrt(dx*dx + dy*dy)/maxDistance; // 0=center, 1=edge
     
+    // Add randomness to distance for a wavy island edge
+    distance += (Math.random()-0.5)*0.15;
+
     if(distance>0.85) groundLayer[y][x]='water';
     else if(distance>0.75) groundLayer[y][x]='sand';
     else{
@@ -57,7 +60,7 @@ for(let y=0;y<worldHeight;y++){
       else groundLayer[y][x]='grass';
     }
 
-    // Object layer
+    // Object layer (trees)
     if(Math.random()<0.05 && groundLayer[y][x]==='grass') objectLayer[y][x]='tree';
     else objectLayer[y][x]=null;
 
