--- a/index.html
+++ b/index.html
@@ -17,26 +17,31 @@ const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-const map = [
-  [1,1,1,1,1,1,1,1],
-  [1,0,0,0,0,0,0,1],
-  [1,0,1,0,1,0,0,1],
-  [1,0,1,0,0,0,0,1],
-  [1,0,0,0,1,0,0,1],
-  [1,1,1,1,1,1,1,1],
-];
-
+const mapWidth = 8;
+const mapHeight = 6;
 const tileSize = 64;
+
+// Generate random map (1 = wall, 0 = empty)
+const map = [];
+for (let y = 0; y < mapHeight; y++) {
+  map[y] = [];
+  for (let x = 0; x < mapWidth; x++) {
+    if (y === 0 || y === mapHeight-1 || x === 0 || x === mapWidth-1) {
+      map[y][x] = 1; // borders
+    } else {
+      map[y][x] = Math.random() < 0.3 ? 1 : 0; // random walls
+    }
+  }
+}
 
 let player = {
   x: tileSize * 1.5,
   y: tileSize * 1.5,
   angle: 0,
-  speed: 2
+  speed: 0.8 // slower speed
 };
 
 const keys = {};
-
 document.addEventListener('keydown', e => keys[e.key] = true);
 document.addEventListener('keyup', e => keys[e.key] = false);
 
@@ -57,7 +62,7 @@ function castRays() {
       let testX = Math.floor((player.x + cos * distance) / tileSize);
       let testY = Math.floor((player.y + sin * distance) / tileSize);
 
-      if (map[testY][testX] === 1) hit = true;
+      if (map[testY] && map[testY][testX] === 1) hit = true;
     }
 
     const wallHeight = (tileSize * 300) / distance;
@@ -68,15 +73,23 @@ function castRays() {
 
 function movePlayer() {
   if (keys['ArrowUp']) {
-    player.x += Math.cos(player.angle) * player.speed;
-    player.y += Math.sin(player.angle) * player.speed;
+    let newX = player.x + Math.cos(player.angle) * player.speed;
+    let newY = player.y + Math.sin(player.angle) * player.speed;
+    if (!map[Math.floor(newY / tileSize)][Math.floor(newX / tileSize)]) {
+      player.x = newX;
+      player.y = newY;
+    }
   }
   if (keys['ArrowDown']) {
-    player.x -= Math.cos(player.angle) * player.speed;
-    player.y -= Math.sin(player.angle) * player.speed;
+    let newX = player.x - Math.cos(player.angle) * player.speed;
+    let newY = player.y - Math.sin(player.angle) * player.speed;
+    if (!map[Math.floor(newY / tileSize)][Math.floor(newX / tileSize)]) {
+      player.x = newX;
+      player.y = newY;
+    }
   }
-  if (keys['ArrowLeft']) player.angle -= 0.05;
-  if (keys['ArrowRight']) player.angle += 0.05;
+  if (keys['ArrowLeft']) player.angle -= 0.03;
+  if (keys['ArrowRight']) player.angle += 0.03;
 }
 
 function gameLoop() {
