--- a/index.html
+++ b/index.html
@@ -46,43 +46,46 @@ document.addEventListener('keydown', e => keys[e.key] = true);
 document.addEventListener('keyup', e => keys[e.key] = false);
 
 function castRays() {
-  const numRays = canvas.width;
-  const fov = Math.PI / 3;
+  const fov = Math.PI * 2 / 3; // 120 degrees FOV
+  const numRays = 300; 
+  const rayWidth = canvas.width / numRays;
 
   for (let i = 0; i < numRays; i++) {
     const rayAngle = (player.angle - fov/2) + (i / numRays) * fov;
     let distance = 0;
     let hit = false;
 
-    let sin = Math.sin(rayAngle);
-    let cos = Math.cos(rayAngle);
+    const sin = Math.sin(rayAngle);
+    const cos = Math.cos(rayAngle);
 
     while (!hit && distance < 500) {
       distance += 1;
-      let testX = Math.floor((player.x + cos * distance) / tileSize);
-      let testY = Math.floor((player.y + sin * distance) / tileSize);
+      const testX = Math.floor((player.x + cos * distance) / tileSize);
+      const testY = Math.floor((player.y + sin * distance) / tileSize);
 
       if (map[testY] && map[testY][testX] === 1) hit = true;
     }
 
+    const shade = 255 - Math.min(distance * 0.5, 200);
+    ctx.fillStyle = `rgb(${shade}, ${shade}, ${shade})`;
+
     const wallHeight = (tileSize * 300) / distance;
-    ctx.fillStyle = 'gray';
-    ctx.fillRect(i, (canvas.height / 2) - wallHeight/2, 1, wallHeight);
+    ctx.fillRect(i * rayWidth, (canvas.height / 2) - wallHeight/2, rayWidth + 1, wallHeight);
   }
 }
 
 function movePlayer() {
   if (keys['ArrowUp']) {
-    let newX = player.x + Math.cos(player.angle) * player.speed;
-    let newY = player.y + Math.sin(player.angle) * player.speed;
+    const newX = player.x + Math.cos(player.angle) * player.speed;
+    const newY = player.y + Math.sin(player.angle) * player.speed;
     if (!map[Math.floor(newY / tileSize)][Math.floor(newX / tileSize)]) {
       player.x = newX;
       player.y = newY;
     }
   }
   if (keys['ArrowDown']) {
-    let newX = player.x - Math.cos(player.angle) * player.speed;
-    let newY = player.y - Math.sin(player.angle) * player.speed;
+    const newX = player.x - Math.cos(player.angle) * player.speed;
+    const newY = player.y - Math.sin(player.angle) * player.speed;
     if (!map[Math.floor(newY / tileSize)][Math.floor(newX / tileSize)]) {
       player.x = newX;
       player.y = newY;
@@ -93,8 +96,11 @@ function movePlayer() {
 }
 
 function gameLoop() {
-  ctx.fillStyle = 'black';
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
+  // Draw ceiling and floor
+  ctx.fillStyle = 'rgb(70,70,70)'; // ceiling
+  ctx.fillRect(0, 0, canvas.width, canvas.height / 2);
+  ctx.fillStyle = 'rgb(50,50,50)'; // floor
+  ctx.fillRect(0, canvas.height / 2, canvas.width, canvas.height / 2);
 
   movePlayer();
   castRays();
