--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Doom-style Dungeon Crawler</title>
+<title>Dungeon Crawler - Sword Combat</title>
 <style>
   body { margin: 0; overflow: hidden; background: black; }
   canvas { display: block; }
@@ -21,104 +21,129 @@ const tileSize = 64;
 const mapWidth = 20;
 const mapHeight = 15;
 
-// Simple dungeon generator: rooms connected by corridors
+// Dungeon generator
 const map = [];
 for (let y = 0; y < mapHeight; y++) {
   map[y] = [];
-  for (let x = 0; x < mapWidth; x++) map[y][x] = 1; // start all walls
+  for (let x = 0; x < mapWidth; x++) map[y][x] = 1;
 }
-
-// Create a few rooms
 function createRoom(x, y, w, h) {
-  for (let i = y; i < y + h; i++) {
-    for (let j = x; j < x + w; j++) {
+  for (let i = y; i < y + h; i++)
+    for (let j = x; j < x + w; j++)
       if (i > 0 && i < mapHeight && j > 0 && j < mapWidth) map[i][j] = 0;
-    }
-  }
 }
-
-// Make 3-4 rooms
-createRoom(1, 1, 6, 5);
-createRoom(10, 2, 5, 6);
-createRoom(5, 9, 8, 4);
-
-// Connect rooms with corridors
-function createCorridor(x1, y1, x2, y2) {
-  while (x1 !== x2) {
-    map[y1][x1] = 0;
-    x1 += x1 < x2 ? 1 : -1;
-  }
-  while (y1 !== y2) {
-    map[y1][x1] = 0;
-    y1 += y1 < y2 ? 1 : -1;
-  }
+createRoom(1,1,6,5);
+createRoom(10,2,5,6);
+createRoom(5,9,8,4);
+function createCorridor(x1,y1,x2,y2){
+  while(x1!==x2){ map[y1][x1]=0; x1 += x1<x2?1:-1; }
+  while(y1!==y2){ map[y1][x1]=0; y1 += y1<y2?1:-1; }
 }
+createCorridor(3,3,12,4);
+createCorridor(12,4,7,10);
 
-createCorridor(3, 3, 12, 4);
-createCorridor(12, 4, 7, 10);
+let player = {x:tileSize*2, y:tileSize*2, angle:0, speed:1.2};
 
-let player = {
-  x: tileSize * 2,
-  y: tileSize * 2,
-  angle: 0,
-  speed: 1.2
-};
+const keys={};
+document.addEventListener('keydown',e=>keys[e.key]=true);
+document.addEventListener('keyup',e=>keys[e.key]=false);
 
-const keys = {};
-document.addEventListener('keydown', e => keys[e.key] = true);
-document.addEventListener('keyup', e => keys[e.key] = false);
+// Enemies
+const enemies = [
+  {x: tileSize*5, y: tileSize*3, hp:3},
+  {x: tileSize*12, y: tileSize*5, hp:3},
+  {x: tileSize*7, y: tileSize*11, hp:3},
+];
 
-function movePlayer() {
+// Player attack
+let swordCooldown = 0;
+
+document.addEventListener('keydown', e=>{
+  if(e.key===' ' && swordCooldown <=0){ // space = attack
+    swordCooldown = 20; // cooldown frames
+    // check enemies in front
+    const range = 80;
+    enemies.forEach(enemy=>{
+      const dx = enemy.x - player.x;
+      const dy = enemy.y - player.y;
+      const dist = Math.hypot(dx,dy);
+      const angleToEnemy = Math.atan2(dy,dx);
+      let diff = angleToEnemy - player.angle;
+      diff = Math.atan2(Math.sin(diff),Math.cos(diff)); // normalize angle
+      if(dist < range && Math.abs(diff) < Math.PI/6){
+        enemy.hp -=1;
+      }
+    });
+  }
+});
+
+function movePlayer(){
   let newX = player.x;
   let newY = player.y;
-
-  if (keys['ArrowUp']) { newX += Math.cos(player.angle) * player.speed; newY += Math.sin(player.angle) * player.speed; }
-  if (keys['ArrowDown']) { newX -= Math.cos(player.angle) * player.speed; newY -= Math.sin(player.angle) * player.speed; }
-  if (keys['ArrowLeft']) player.angle -= 0.04;
-  if (keys['ArrowRight']) player.angle += 0.04;
-
-  // Collision
-  const left = Math.floor(newX / tileSize);
-  const top = Math.floor(newY / tileSize);
-  if (map[top] && map[top][left] === 0) { player.x = newX; player.y = newY; }
+  if(keys['ArrowUp']){ newX+=Math.cos(player.angle)*player.speed; newY+=Math.sin(player.angle)*player.speed; }
+  if(keys['ArrowDown']){ newX-=Math.cos(player.angle)*player.speed; newY-=Math.sin(player.angle)*player.speed; }
+  if(keys['ArrowLeft']) player.angle -= 0.04;
+  if(keys['ArrowRight']) player.angle += 0.04;
+  const left = Math.floor(newX/tileSize), top=Math.floor(newY/tileSize);
+  if(map[top] && map[top][left]===0){ player.x=newX; player.y=newY; }
 }
 
-function castRays() {
-  const fov = Math.PI * 2 / 3;
-  const numRays = 300;
-  const rayWidth = canvas.width / numRays;
-
-  for (let i = 0; i < numRays; i++) {
-    const rayAngle = (player.angle - fov / 2) + (i / numRays) * fov;
-    let distance = 0;
-    let hit = false;
-    const sin = Math.sin(rayAngle);
-    const cos = Math.cos(rayAngle);
-
-    while (!hit && distance < 800) {
-      distance += 1;
-      const testX = Math.floor((player.x + cos * distance) / tileSize);
-      const testY = Math.floor((player.y + sin * distance) / tileSize);
-
-      if (map[testY] && map[testY][testX] === 1) hit = true;
+function castRays(){
+  const fov=Math.PI*2/3;
+  const numRays=300;
+  const rayWidth=canvas.width/numRays;
+  for(let i=0;i<numRays;i++){
+    const rayAngle=(player.angle-fov/2)+(i/numRays)*fov;
+    let distance=0; let hit=false;
+    const sin=Math.sin(rayAngle), cos=Math.cos(rayAngle);
+    while(!hit && distance<800){
+      distance+=1;
+      const testX=Math.floor((player.x+cos*distance)/tileSize);
+      const testY=Math.floor((player.y+sin*distance)/tileSize);
+      if(map[testY] && map[testY][testX]===1) hit=true;
     }
-
-    const shade = 255 - Math.min(distance * 0.5, 200);
-    ctx.fillStyle = `rgb(${shade}, ${shade}, ${shade})`;
-
-    const wallHeight = (tileSize * 300) / distance;
-    ctx.fillRect(i * rayWidth, (canvas.height / 2) - wallHeight / 2, rayWidth + 1, wallHeight);
+    let shade=255-Math.min(distance*0.5,200);
+    ctx.fillStyle=`rgb(${shade},${shade},${shade})`;
+    const wallHeight=(tileSize*300)/distance;
+    ctx.fillRect(i*rayWidth,(canvas.height/2)-wallHeight/2,rayWidth+1,wallHeight);
   }
 }
 
-function gameLoop() {
+// Draw sword and enemies overlay
+function drawOverlay(){
+  // Sword
+  if(swordCooldown>10){ // swinging
+    ctx.fillStyle='silver';
+    ctx.fillRect(canvas.width/2,canvas.height*0.65,20,100);
+  }
+  // Enemies (simple red rectangles in front)
+  enemies.forEach(enemy=>{
+    if(enemy.hp<=0) return;
+    const dx=enemy.x-player.x;
+    const dy=enemy.y-player.y;
+    const dist=Math.hypot(dx,dy);
+    const angleToEnemy=Math.atan2(dy,dx);
+    let diff=angleToEnemy-player.angle;
+    diff=Math.atan2(Math.sin(diff),Math.cos(diff));
+    if(Math.abs(diff)<Math.PI/6 && dist>0){
+      const size=(tileSize*300)/dist;
+      const screenX=(canvas.width/2)+(diff/(Math.PI/3))*(canvas.width/2);
+      ctx.fillStyle='red';
+      ctx.fillRect(screenX-size/2,(canvas.height/2)-size/2,size,size);
+    }
+  });
+}
+
+function gameLoop(){
   // Floor and ceiling
-  ctx.fillStyle = 'rgb(70,70,70)'; ctx.fillRect(0, 0, canvas.width, canvas.height / 2);
-  ctx.fillStyle = 'rgb(50,50,50)'; ctx.fillRect(0, canvas.height / 2, canvas.width, canvas.height / 2);
+  ctx.fillStyle='rgb(70,70,70)'; ctx.fillRect(0,0,canvas.width,canvas.height/2);
+  ctx.fillStyle='rgb(50,50,50)'; ctx.fillRect(0,canvas.height/2,canvas.width,canvas.height/2);
 
   movePlayer();
   castRays();
+  drawOverlay();
 
+  if(swordCooldown>0) swordCooldown--;
   requestAnimationFrame(gameLoop);
 }
 
